--- a/src/app/features/header/menu-dropdown/menu-dropdown.css
+++ b/src/app/features/header/menu-dropdown/menu-dropdown.css
@@ -1,18 +1,19 @@
 :host {
   position: absolute;
-  width: 150%;
+  width: 160%;
   top: 20px;
-  left: 0;
+  left: -11px;
   border-radius: 0.5rem;
   margin-top: 1rem;
   background-color: var(--bg-color);
+  z-index: 2;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 ul {
   padding: 0.5rem;
   padding-top: 0;
-  padding-left: 0;
+  padding-left: 11px;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
