--- a/src/app/pages/category/category.html
+++ b/src/app/pages/category/category.html
@@ -3,7 +3,11 @@
 } @else {
 <app-section-title [content]="category"></app-section-title>
 @if (articles.length > 0) {
-<app-article-grid [articles]="articles" [columns]="3"></app-article-grid>
+<app-article-grid
+  [articles]="articles"
+  [columns]="3"
+  (openAuthorDetails)="onAuthorClick($event)"
+></app-article-grid>
 } @else {
 <app-empty-state></app-empty-state>
 } }
