Added article edit

--- a/src/app/features/article/article-category-filter/article-category-filter.css
+++ b/src/app/features/article/article-category-filter/article-category-filter.css
@@ -12,7 +12,10 @@
 
     li {
       display: block;
-      cursor: pointer;
+
+      a {
+        cursor: pointer;
+      }
 
       a:hover {
         color: #8f8f8f;
@@ -56,8 +59,11 @@ hr {
 
     li {
       list-style: none;
-      cursor: pointer;
       height: fit-content;
+
+      a {
+        cursor: pointer;
+      }
 
       a:hover {
         color: #8f8f8f;
