--- a/src/app/pages/author-details/author-details.html
+++ b/src/app/pages/author-details/author-details.html
@@ -11,17 +11,13 @@
   <aside>
     <div class="header">
       <h5>Hello!</h5>
+
       @if (currentUserId === authorId) {
       <svg
         routerLink="/settings"
-        class="btn edit-btn"
+        class="edit-icon-btn"
         xmlns="http://www.w3.org/2000/svg"
-        data-name="Layer 1"
         viewBox="1 1 22 22"
-        width="27"
-        height="27"
-        x="0px"
-        y="0px"
       >
         <path
           d="M11.007,9.815l-.956,2.869a1.007,1.007,0,0,0,1.265,1.264l2.869-.956a1.007,1.007,0,0,0,.39-.241l6.736-6.736a2.354,2.354,0,0,0,0-3.327h0a2.356,2.356,0,0,0-3.326,0L11.249,9.425A1,1,0,0,0,11.007,9.815Z"
