Added article delete

--- a/src/app/features/article/article-header/article-header.html
+++ b/src/app/features/article/article-header/article-header.html
@@ -24,7 +24,7 @@
             <span>Edit</span>
           </div>
         </div>
-        <div class="delete">
+        <div class="delete" (click)="onDelete()">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             version="1.1"
