--- a/src/app/pages/article-details/article-details.html
+++ b/src/app/pages/article-details/article-details.html
@@ -8,6 +8,7 @@
   [articleId]="articleId"
   (openAuthorDetails)="onAuthorClick($event)"
   (likeClick)="onLikeClick($event)"
+  (delete)="onDeleteClick()"
 ></app-article-header>
 <app-article-content
   [sanitizedContent]="sanitizedContent"
