--- a/src/app/shared/modal/modal.css
+++ b/src/app/shared/modal/modal.css
@@ -26,10 +26,10 @@ form {
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
-}
 
-app-primary-button {
-  margin-top: 0.7rem;
+  app-primary-button {
+    margin-top: 0.7rem;
+  }
 }
 
 /* Input field styles */
@@ -134,4 +134,17 @@ input {
 
 .field-wrapper.row-layout {
   flex: 1 1 45%;
+}
+
+.confirmation-message {
+  margin-top: 0.7rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  font-weight: 300;
+  font-size: 0.95rem;
+}
+
+.actions {
+  display: flex;
+  gap: 1.5rem;
 }
