--- a/src/app/pages/article-edit/article-edit.html
+++ b/src/app/pages/article-edit/article-edit.html
@@ -14,6 +14,7 @@
     [previewFileUrl]="previewFileUrl"
     (fileSelected)="onFileSelected($event)"
     (submit)="onFormSubmit()"
+    (cancel)="onCancel()"
   ></app-article-header-form>
 
   <app-text-editor
