--- a/src/app/features/article/article-header-form/article-header-form.css
+++ b/src/app/features/article/article-header-form/article-header-form.css
@@ -77,8 +77,25 @@
   }
 }
 
+.buttons {
+  display: flex;
+  gap: 0.5rem;
+}
+
 .publish-btn {
   position: relative;
+}
+
+.cancel-btn a {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  color: var(--search-bar-text);
+  font-weight: 500;
+
+  &:hover {
+    color: #bbb;
+  }
 }
 
 .title-image-container {
