--- a/src/app/pages/author-details/author-details.html
+++ b/src/app/pages/author-details/author-details.html
@@ -12,7 +12,7 @@
     <div class="header">
       <h5>Hello!</h5>
 
-      @if (currentUserId === authorId) {
+      <!-- @if (currentUserId === authorId) {
       <svg
         routerLink="/settings"
         class="edit-icon-btn"
@@ -26,7 +26,7 @@
           d="M21,9a1,1,0,0,0-1,1v7a3,3,0,0,1-3,3H7a3,3,0,0,1-3-3V7A3,3,0,0,1,7,4h7a1,1,0,0,0,0-2H7A5.006,5.006,0,0,0,2,7V17a5.006,5.006,0,0,0,5,5H17a5.006,5.006,0,0,0,5-5V10A1,1,0,0,0,21,9Z"
         />
       </svg>
-      }
+      } -->
     </div>
 
     <p class="bio">
