--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,7 @@
   --input-border-focus: #757575;
   --input-autofill-bg: #f4f4f4;
   --error-msg-bg: #f6ebeb;
+  --bio-placeholder: #ccc;
 }
 
 body.dark-mode {
@@ -61,6 +62,7 @@ body.dark-mode {
   --input-border-focus: #666666;
   --input-autofill-bg: #272727;
   --error-msg-bg: #381919;
+  --bio-placeholder: #5f5f5f;
 }
 
 * {
