Added reading list + clean up

--- a/src/app/features/article/article-header/article-header.html
+++ b/src/app/features/article/article-header/article-header.html
@@ -1,69 +1,67 @@
-<ng-container *ngIf="article$ | async as article">
-  <div class="header-container">
-    <div class="author-controls">
-      <div class="created-date">
-        {{ article?.createdAt?.toDate() | date : "MMM d, y" }}
-      </div>
-
-      @if (currentUserId === article.authorId) {
-      <div class="controls">
-        <div class="edit-wrapper">
-          <div class="edit" [routerLink]="['/articles', articleId, 'edit']">
-            <svg
-              class="edit-icon"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="1 1 22 22"
-            >
-              <path
-                d="M11.007,9.815l-.956,2.869a1.007,1.007,0,0,0,1.265,1.264l2.869-.956a1.007,1.007,0,0,0,.39-.241l6.736-6.736a2.354,2.354,0,0,0,0-3.327h0a2.356,2.356,0,0,0-3.326,0L11.249,9.425A1,1,0,0,0,11.007,9.815Z"
-              />
-              <path
-                d="M21,9a1,1,0,0,0-1,1v7a3,3,0,0,1-3,3H7a3,3,0,0,1-3-3V7A3,3,0,0,1,7,4h7a1,1,0,0,0,0-2H7A5.006,5.006,0,0,0,2,7V17a5.006,5.006,0,0,0,5,5H17a5.006,5.006,0,0,0,5-5V10A1,1,0,0,0,21,9Z"
-              />
-            </svg>
-            <span>Edit</span>
-          </div>
-        </div>
-        <div class="delete" (click)="onDelete()">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            version="1.1"
-            viewBox="2 3 28 26"
-          >
-            <path
-              d="M27,6h-2h-4V5c0-1.6542969-1.3457031-3-3-3h-4c-1.6542969,0-3,1.3457031-3,3v1H7H5C4.4477539,6,4,6.4477539,4,7  s0.4477539,1,1,1h1v16c0,3.3085938,2.6914063,6,6,6h8c3.3085938,0,6-2.6914063,6-6V8h1c0.5522461,0,1-0.4477539,1-1  S27.5522461,6,27,6z M13,5c0-0.5512695,0.4487305-1,1-1h4c0.5512695,0,1,0.4487305,1,1v1h-6V5z M24,24c0,2.2055664-1.7944336,4-4,4  h-8c-2.2055664,0-4-1.7944336-4-4V8h4h8h4V24z M20,12v12c0,0.5522461-0.4477539,1-1,1s-1-0.4477539-1-1V12  c0-0.5522461,0.4477539-1,1-1S20,11.4477539,20,12z M14,12v12c0,0.5522461-0.4477539,1-1,1s-1-0.4477539-1-1V12  c0-0.5522461,0.4477539-1,1-1S14,11.4477539,14,12z"
-            />
-          </svg>
-          <span>Delete</span>
-        </div>
-      </div>
-      }
+<div class="header-container">
+  <div class="author-controls">
+    <div class="created-date">
+      {{ article.createdAt.toDate() | date : "MMM d, y" }}
     </div>
 
-    <div class="title-toolbar-wrapper">
-      <h2 class="title">
-        {{ article?.title }}
-      </h2>
+    @if (currentUserId === article.authorId) {
+    <div class="controls">
+      <div class="edit-wrapper">
+        <div class="edit" [routerLink]="['/articles', articleId, 'edit']">
+          <svg
+            class="edit-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="1 1 22 22"
+          >
+            <path
+              d="M11.007,9.815l-.956,2.869a1.007,1.007,0,0,0,1.265,1.264l2.869-.956a1.007,1.007,0,0,0,.39-.241l6.736-6.736a2.354,2.354,0,0,0,0-3.327h0a2.356,2.356,0,0,0-3.326,0L11.249,9.425A1,1,0,0,0,11.007,9.815Z"
+            />
+            <path
+              d="M21,9a1,1,0,0,0-1,1v7a3,3,0,0,1-3,3H7a3,3,0,0,1-3-3V7A3,3,0,0,1,7,4h7a1,1,0,0,0,0-2H7A5.006,5.006,0,0,0,2,7V17a5.006,5.006,0,0,0,5,5H17a5.006,5.006,0,0,0,5-5V10A1,1,0,0,0,21,9Z"
+            />
+          </svg>
+          <span>Edit</span>
+        </div>
+      </div>
+      <div class="delete" (click)="onDelete()">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          version="1.1"
+          viewBox="2 3 28 26"
+        >
+          <path
+            d="M27,6h-2h-4V5c0-1.6542969-1.3457031-3-3-3h-4c-1.6542969,0-3,1.3457031-3,3v1H7H5C4.4477539,6,4,6.4477539,4,7  s0.4477539,1,1,1h1v16c0,3.3085938,2.6914063,6,6,6h8c3.3085938,0,6-2.6914063,6-6V8h1c0.5522461,0,1-0.4477539,1-1  S27.5522461,6,27,6z M13,5c0-0.5512695,0.4487305-1,1-1h4c0.5512695,0,1,0.4487305,1,1v1h-6V5z M24,24c0,2.2055664-1.7944336,4-4,4  h-8c-2.2055664,0-4-1.7944336-4-4V8h4h8h4V24z M20,12v12c0,0.5522461-0.4477539,1-1,1s-1-0.4477539-1-1V12  c0-0.5522461,0.4477539-1,1-1S20,11.4477539,20,12z M14,12v12c0,0.5522461-0.4477539,1-1,1s-1-0.4477539-1-1V12  c0-0.5522461,0.4477539-1,1-1S14,11.4477539,14,12z"
+          />
+        </svg>
+        <span>Delete</span>
+      </div>
+    </div>
+    }
+  </div>
 
-      <div class="toolbar">
+  <div class="title-toolbar-wrapper">
+    <h2 class="title">
+      {{ article.title }}
+    </h2>
+
+    <div class="toolbar">
+      <div class="toolbar-container toolbar-left">
         <div class="author">
           by
-          <span (click)="onAuthorClick(article?.authorId)">{{
-            article?.authorName
+          <span (click)="onAuthorClick(article.authorId)">{{
+            article.authorName
           }}</span>
         </div>
 
         <div class="likes">
           <svg
-            #heartIcon
-            (click)="onLikeClick(article?.likedBy, heartIcon)"
             xmlns="http://www.w3.org/2000/svg"
             version="1.1"
-            width="18"
-            height="18"
-            viewBox="10 23 80 55"
+            viewBox="10 23 85 55"
             [class]="hasLiked ? 'heart-icon liked' : 'heart-icon'"
+            (click)="onLike()"
           >
+            <title>Heart</title>
             <g transform="translate(0,-952.36218)">
               <path
                 d="m 18.356844,974.98986 c -7.1459,7.50345 -7.139,19.5777 0,27.08854 l 31.6235,33.2838 c 10.5534,-11.0817 21.1069,-22.1634 31.6603,-33.2453 7.1458,-7.50359 7.1458,-19.58504 0,-27.08864 -7.1458,-7.50358 -18.6513,-7.50375 -25.7972,0 l -5.8264,6.11805 -5.863,-6.15645 c -7.1459,-7.50359 -18.6515,-7.50359 -25.7972,0 z"
@@ -71,28 +69,65 @@
             </g>
           </svg>
           <div class="likes-count">
-            {{ article?.likes }}
+            {{ likes$ | async }}
           </div>
         </div>
+      </div>
 
+      <div class="toolbar-container toolbar-right">
+        @if (currentUserId !== article.authorId) {
         <div class="bookmark">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 640 640"
-            width="19"
-            height="19"
-            class="bookmark-icon unchecked"
+            [class]="hasBookmarked ? 'bookmark-icon checked' : 'bookmark-icon'"
+            (click)="onBookmark()"
           >
+            <title>Save</title>
             <path
               d="M192 64C156.7 64 128 92.7 128 128L128 544C128 555.5 134.2 566.2 144.2 571.8C154.2 577.4 166.5 577.3 176.4 571.4L320 485.3L463.5 571.4C473.4 577.3 485.7 577.5 495.7 571.8C505.7 566.1 512 555.5 512 544L512 128C512 92.7 483.3 64 448 64L192 64z"
             />
           </svg>
         </div>
+        }
+
+        <div class="share">
+          @if (isCopied) {
+          <span #popUp class="popup-copied fade">Link copied!</span>
+          }
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            version="1.1"
+            viewBox="2 -5 100 100"
+            class="share-icon"
+            (click)="onShare()"
+          >
+            <title>Copy link</title>
+            <path
+              d="m22.914 55.359c1.6289 0.57031 2.4805 2.3594 1.9062 3.9883-0.57422 1.625-2.3633 2.4766-3.9883 1.9023-3.0508-1.0742-5.8516-2.8242-8.1797-5.1562-4.1016-4.1016-6.4062-9.6641-6.4062-15.461v-0.011718c0-5.8008 2.3047-11.363 6.4062-15.461 4.1016-4.1016 9.6641-6.4062 15.461-6.4062h25.031c5.8008 0 11.363 2.3047 15.465 6.4062 4.1016 4.1016 6.4023 9.6641 6.4023 15.461v0.011718c0 5.8008-2.3047 11.363-6.4023 15.461-4.1016 4.1016-9.6641 6.4062-15.465 6.4062h-12.523c-1.7266 0-3.125-1.3984-3.125-3.125s1.3984-3.125 3.125-3.125h12.523c4.1445 0 8.1172-1.6484 11.043-4.5742 2.9297-2.9297 4.5742-6.8984 4.5742-11.043v-0.011718c0-4.1445-1.6445-8.1172-4.5742-11.043-2.9297-2.9297-6.8984-4.5742-11.043-4.5742h-25.031c-4.1445 0-8.1172 1.6484-11.043 4.5742-2.9297 2.9297-4.5742 6.8984-4.5742 11.043v0.011718c0 4.1445 1.6484 8.1172 4.5742 11.043 1.6641 1.6641 3.6641 2.9141 5.8398 3.6836zm57.297-10.723c-1.6289-0.57422-2.4844-2.3594-1.9102-3.9883 0.57031-1.625 2.3555-2.4805 3.9844-1.9102 3.0547 1.0742 5.8672 2.8281 8.2031 5.1641 4.1016 4.1016 6.4023 9.6641 6.4023 15.461v0.011719c0 5.8008-2.3047 11.363-6.4023 15.461-4.1016 4.1016-9.6641 6.4062-15.465 6.4062h-25.031c-5.8008 0-11.363-2.3047-15.461-6.4062-4.1016-4.1016-6.4062-9.6641-6.4062-15.461v-0.011719c0-5.8008 2.3047-11.363 6.4062-15.461 4.1016-4.1016 9.6641-6.4062 15.461-6.4062h12.508c1.7266 0 3.125 1.3984 3.125 3.125 0 1.7266-1.3984 3.125-3.125 3.125h-12.508c-4.1445 0-8.1172 1.6484-11.043 4.5742-2.9297 2.9297-4.5742 6.8984-4.5742 11.043v0.011719c0 4.1445 1.6484 8.1172 4.5742 11.043 2.9297 2.9297 6.8984 4.5742 11.043 4.5742h25.031c4.1445 0 8.1172-1.6484 11.043-4.5742 2.9297-2.9297 4.5742-6.8984 4.5742-11.043v-0.011719c0-4.1445-1.6445-8.1172-4.5742-11.043-1.6641-1.668-3.6719-2.918-5.8555-3.6875z"
+              fill-rule="evenodd"
+            />
+          </svg>
+        </div>
       </div>
     </div>
-
-    <div class="cover-img-wrapper">
-      <img [src]="article.thumbnailUrl" alt="Article cover image" />
-    </div>
   </div>
-</ng-container>
+
+  <div class="cover-img-wrapper">
+    <img [src]="article.thumbnailUrl" alt="Article cover image" />
+  </div>
+</div>
+
+<!-- <svg
+  xmlns="http://www.w3.org/2000/svg"
+  version="1.1"
+  viewBox="-1 0 105 95"
+  class="share-icon"
+  (click)="onShare()"
+>
+  <title>Copy link</title>
+  <path
+    d="m67.234 17.875c7.3672-7.3203 19.371-7.3203 26.738 0l0.007813-0.007812c3.5742 3.5469 5.5352 8.2695 5.5352 13.285 0 5.0117-1.9727 9.7266-5.543 13.277l-28.73 28.551c-3.5703 3.5469-8.3242 5.5078-13.367 5.5078-5.0469 0-9.7891-1.9492-13.359-5.5-3.5742-3.5469-5.5352-8.2617-5.5352-13.285s1.9609-9.7383 5.5352-13.285l12.352-12.277 3.457 3.4297-12.355 12.281c-2.6523 2.6367-4.1094 6.1289-4.1094 9.8594 0 3.7344 1.4648 7.2383 4.1094 9.8633 2.6562 2.6406 6.168 4.0859 9.9141 4.0859 3.7461 0 7.2617-1.4453 9.9141-4.0859l28.73-28.551c2.6445-2.6367 4.1094-6.1172 4.1094-9.8516s-1.4648-7.2344-4.1094-9.8633c-5.4648-5.4297-14.363-5.4297-19.84 0l-2 1.9883-3.4531-3.4336zm-57.75 60.816c5.4648 5.4297 14.363 5.4414 19.836 0l-0.007812-0.007812 2-1.9883 3.4531 3.4336-2 1.9883c-3.5703 3.5391-8.3125 5.4961-13.367 5.4961-5.0547 0-9.7969-1.9492-13.371-5.4961-3.5703-3.5508-5.5312-8.2656-5.5312-13.289 0-5.0117 1.9688-9.7344 5.543-13.277l28.727-28.551c5.5234-5.4883 13.73-7.0391 20.895-3.9453 2.168 0.92969 4.1367 2.2578 5.8359 3.9453 1.707 1.6992 3.043 3.6562 3.9805 5.8203 1.0156 2.3086 1.5508 4.8867 1.5508 7.4688 0 5.0234-1.9609 9.7344-5.5312 13.285l-12.355 12.277-3.4531-3.4336 12.352-12.277c2.6562-2.6367 4.1094-6.1406 4.1094-9.8633 0-1.9102-0.39844-3.832-1.1523-5.5391-0.69922-1.6094-1.6875-3.0547-2.957-4.3125-1.2578-1.2539-2.7109-2.2305-4.3203-2.9219-5.3203-2.2969-11.398-1.1445-15.508 2.9297l-28.727 28.551c-2.6445 2.6289-4.1094 6.1289-4.1094 9.8555 0 3.7227 1.4648 7.2227 4.1094 9.8516z"
+    fill-rule="evenodd"
+  />
+</svg> -->
