--- a/src/app/features/article/article-header/article-header.css
+++ b/src/app/features/article/article-header/article-header.css
@@ -90,6 +90,15 @@
 .toolbar {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+
+  .toolbar-container {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.toolbar-left {
   gap: 2rem;
 
   .author {
@@ -117,6 +126,8 @@
     }
 
     .heart-icon {
+      width: 1.1rem;
+      height: 1.1rem;
       cursor: pointer;
       fill: none;
       stroke: var(--text-color);
@@ -129,8 +140,15 @@
       }
     }
   }
+}
+
+.toolbar-right {
+  gap: 1.5rem;
+  margin-right: 1rem;
 
   .bookmark-icon {
+    width: 1.15rem;
+    height: 1.15rem;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -144,6 +162,16 @@
       stroke-width: 45;
     }
   }
+
+  .share-icon {
+    width: 1.3rem;
+    height: 1.3rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    stroke: var(--text-color);
+    fill: var(--text-color);
+  }
 }
 
 .cover-img-wrapper {
@@ -155,5 +183,44 @@
   img {
     height: 100%;
     object-fit: cover;
+  }
+}
+
+.share {
+  position: relative;
+}
+
+.popup-copied {
+  background-color: var(--search-bar-bg);
+  color: var(--search-bar-text);
+  text-align: center;
+  font-size: 0.8rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  position: absolute;
+  z-index: 1;
+  top: -30%;
+  left: 160%;
+  text-wrap: nowrap;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.fade {
+  animation: fadeIn 3s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
