--- a/src/app/features/header/menu-dropdown/menu-dropdown.html
+++ b/src/app/features/header/menu-dropdown/menu-dropdown.html
@@ -1,8 +1,8 @@
 <ul>
-  <li><a (click)="loadMyArticles()">view profile</a></li>
-  <li><a>reading list</a></li>
-  <li><a routerLink="/settings">settings</a></li>
-  <li class="logout" (click)="onLogout()">
+  <li><a (click)="profileClick.emit()">view profile</a></li>
+  <li><a (click)="readingListClick.emit()">reading list</a></li>
+  <li><a (click)="settingsClick.emit()">settings</a></li>
+  <li class="logout" (click)="logout.emit()">
     <div class="btn logout-icon-btn">
       <svg
         xmlns="http://www.w3.org/2000/svg"
